src/test/testFiles/invalid/semanticErrors/incorrectScopingInIfStatement.val
let x = 3;
if(x == 3) {
    let y = 3;
} else {
    y = 4;
}